reworked menu and added menu painter class